实现记分板翻译功能，新增ScoreboardConfig配置类，更新InGameHudMixin以支持动态文本动画和记分板条目替换，同时重构TemplateProcessor以处理物品描述模板。

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -2,6 +2,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.title": "Translate All in One",
   "text.autoconfig.translate_allinone/translate_allinone.category.chat_translate": "Chat Translation",
   "text.autoconfig.translate_allinone/translate_allinone.category.item_translate": "Item Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.category.scoreboard_translate": "Scoreboard Translation",
 
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OPENAI": "OpenAI",
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OLLAMA": "Ollama",
@@ -10,6 +11,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "Enable Chat Translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "Auto Translate",
@@ -54,6 +57,30 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "Custom Parameters",
+
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled": "Enable Scoreboard Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_prefix_and_suffix_name": "Translate Prefix and Suffix Names",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_player_name": "Translate Player Names",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_concurrent_requests": "Max Concurrent Tasks",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.requests_per_minute": "Maximum requests per minute",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_batch_size": "Max Batch Size",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.target_language": "Target Language",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.llm_provider": "Large Model API Format (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi": "OpenAI API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl": "Base URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.apiKey": "API Key",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama": "Ollama API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.keep_alive_time": "Keep-Alive Time",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.custom_parameters": "Custom Parameters",
+  
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry": "Custom parameter item",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.key": "Custom parameter Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "Custom parameter value",
