--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -2,6 +2,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.title": "Translate All in One",
   "text.autoconfig.translate_allinone/translate_allinone.category.chat_translate": "聊天翻译",
   "text.autoconfig.translate_allinone/translate_allinone.category.item_translate": "物品翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.category.scoreboard_translate": "计分板翻译",
 
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OPENAI": "OpenAI",
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OLLAMA": "Ollama",
@@ -49,6 +50,30 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "自定义参数",
+
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled": "启用计分板翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_prefix_and_suffix_name": "翻译前缀和后缀名称",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_player_name": "翻译玩家名称",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_concurrent_requests": "最大并发任务数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.requests_per_minute": "每分钟最大请求数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_batch_size": "每次最大翻译条数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi": "OpenAI API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl": "API 地址",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.apiKey": "API 密钥",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama": "Ollama API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.keep_alive_time": "模型保持加载时间",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.custom_parameters": "自定义参数",
+
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry": "自定义参数项",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.key": "参数名",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "参数值",
@@ -56,6 +81,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
   "text.translate_allinone.translate_button_hover": "翻译这条消息",
   "text.translate_allinone.processing": "处理中...",
   "text.translate_allinone.thinking": "思考中... Tokens:%d",
