更新记分板翻译功能，重构相关配置类和处理逻辑，优化翻译助手的系统提示，增强文本处理能力，确保翻译结果保留格式和颜色信息。

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -11,8 +11,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "Enable Chat Translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "Auto Translate",
@@ -57,30 +57,28 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "Custom Parameters",
-
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled": "Enable Scoreboard Translation",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_prefix_and_suffix_name": "Translate Prefix and Suffix Names",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.enabled_translate_player_name": "Translate Player Names",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_concurrent_requests": "Max Concurrent Tasks",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.requests_per_minute": "Maximum requests per minute",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.max_batch_size": "Max Batch Size",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.target_language": "Target Language",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.llm_provider": "Large Model API Format (Click to Switch)",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi": "OpenAI API Settings",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.baseUrl": "Base URL",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.apiKey": "API Key",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.modelId": "Model ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.temperature": "Temperature",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.system_prompt_suffix": "System Prompt Suffix",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.openapi.custom_parameters": "Custom Parameters",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama": "Ollama API Settings",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.ollamaUrl": "Ollama URL",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.modelId": "Model ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.keep_alive_time": "Keep-Alive Time",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.temperature": "Temperature",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.system_prompt_suffix": "System Prompt Suffix",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardConfig.ollama.custom_parameters": "Custom Parameters",
-  
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled": "Enable scoreboard translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_prefix_and_suffix_name": "Enable scoreboard prefix and suffix name translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_player_name": "Enable scoreboard player name translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_concurrent_requests": "The number of parallel translation threads",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.requests_per_minute": "API requests per minute limit (0 to disable)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_batch_size": "The maximum number of item lore lines to translate in a single API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.target_language": "The target language for translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.llm_provider": "Large Language Model Suppliers (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi": "OpenAI API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl": "Base URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.apiKey": "API Key",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama": "Ollama API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.keep_alive_time": "Keep-Alive Time",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry": "Custom parameter item",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.key": "Custom parameter Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "Custom parameter value",
