--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -15,11 +15,18 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "Enable Chat Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled.@Tooltip": "Enable chat translation feature",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "Auto Translate",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate.@Tooltip": "Automatically translate incoming chat messages without clicking the button",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider": "Large Model API Format (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language": "Target Language",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language.@Tooltip": "The target language for translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response": "Streaming Response",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response.@Tooltip": "Receive the translated response in a streaming fashion",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests": "Max Concurrent Tasks",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[0]": "Maximum number of concurrent translation tasks.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[1]": "Be careful with high values, as it may trigger API rate limits.",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi": "OpenAI API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl": "Base URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.apiKey": "API Key",
@@ -27,6 +34,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama": "Ollama API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.modelId": "Model ID",
@@ -34,15 +42,24 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled": "Enable Item Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled.@Tooltip": "Enable item translation features",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_concurrent_requests": "Maximum number of threads",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_concurrent_requests.@Tooltip": "The number of parallel translation threads",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.requests_per_minute": "Maximum requests per minute",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.requests_per_minute.@Tooltip": "API requests per minute limit (0 to disable)",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_batch_size": "Max Batch Size",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_batch_size.@Tooltip": "The maximum number of item lore lines to translate in a single API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_custom_name": "Translate Item Name",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_custom_name.@Tooltip": "Translate custom names of items (e.g., from an anvil)",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_lore": "Translate lore (item description)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_lore.@Tooltip": "Translate the lore of items",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.target_language": "Target Language",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.target_language.@Tooltip": "The target language for translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.llm_provider": "Large Model API Format (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi": "OpenAI API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl": "Base URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.apiKey": "API Key",
@@ -50,6 +67,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama": "Ollama API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.modelId": "Model ID",
@@ -57,14 +75,37 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding": "Keybinding Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode": "Keybinding Mode",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "The keybinding must be set in the game's control settings.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[0]": "Keybinding mode for item translation.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[1]": "- Hold to Translate: Translate only when the key is pressed.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[2]": "- Hold for Original: Always translate, show original text when the key is pressed.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[3]": "- Disabled: The key does not affect translation behavior.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding": "Keybinding Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode": "Keybinding Mode",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "The keybinding must be set in the game's control settings.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[0]": "Keybinding mode for scoreboard translation.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[1]": "- Hold to Translate: Translate only when the key is pressed.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[2]": "- Hold for Original: Always translate, show original text when the key is pressed.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[3]": "- Disabled: The key does not affect translation behavior.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled": "Enable scoreboard translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled.@Tooltip": "Enable scoreboard translation features",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_prefix_and_suffix_name": "Enable scoreboard prefix and suffix name translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_prefix_and_suffix_name.@Tooltip": "Enable scoreboard prefix and suffix name translation features",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_player_name": "Enable scoreboard player name translation features",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_player_name.@Tooltip": "Enable scoreboard player name translation features",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_concurrent_requests": "The number of parallel translation threads",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_concurrent_requests.@Tooltip": "The number of parallel translation threads",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.requests_per_minute": "API requests per minute limit (0 to disable)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.requests_per_minute.@Tooltip": "API requests per minute limit (0 to disable)",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_batch_size": "The maximum number of item lore lines to translate in a single API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_batch_size.@Tooltip": "The maximum number of item lore lines to translate in a single API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.target_language": "The target language for translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.target_language.@Tooltip": "The target language for translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.llm_provider": "Large Language Model Suppliers (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi": "OpenAI API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl": "Base URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.apiKey": "API Key",
@@ -72,6 +113,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama": "Ollama API Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.modelId": "Model ID",
@@ -79,9 +121,13 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.temperature": "Temperature",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry": "Custom parameter item",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.key": "Custom parameter Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "Custom parameter value",
+  "key.translate_allinone.item_translate_key": "Item Translation Key",
+  "key.translate_allinone.scoreboard_translate_key": "Scoreboard Translation Key",
+  "category.translate_allinone.keybindings": "Translate All in One",
 
   "text.translate_allinone.translate_button_hover": "Translate this message",
   "text.translate_allinone.processing": "Processing...",
