--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -8,11 +8,18 @@
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OLLAMA": "Ollama",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "启用聊天翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled.@Tooltip": "启用聊天翻译功能",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "自动翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate.@Tooltip": "自动翻译收到的聊天消息，无需点击按钮",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language.@Tooltip": "翻译的目标语言",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response": "流式响应",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response.@Tooltip": "以流式方式接收翻译后的响应",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests": "最大并发任务数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[0]": "最大并发翻译任务数。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[1]": "请谨慎设置高数值，可能会触发API速率限制。",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi": "OpenAI API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl": "API 地址",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.apiKey": "API 密钥",
@@ -20,6 +27,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama": "Ollama API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.modelId": "模型 ID",
@@ -27,15 +35,24 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled": "启用物品翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled.@Tooltip": "启用物品翻译功能",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_concurrent_requests": "最大线程数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_concurrent_requests.@Tooltip": "并翻译线程的数量",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.requests_per_minute": "每分钟最大请求数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.requests_per_minute.@Tooltip": "API每分钟请求数限制（0为禁用）",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_batch_size": "每次最大翻译条数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.max_batch_size.@Tooltip": "单个API请求中翻译的物品lore最大行数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_custom_name": "翻译物品名称",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_custom_name.@Tooltip": "翻译物品的自定义名称（例如，来自铁砧）",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_lore": "翻译 lore (物品简介)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled_translate_item_lore.@Tooltip": "翻译物品的lore",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.target_language.@Tooltip": "翻译的目标语言",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi": "OpenAI API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl": "API 地址",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.apiKey": "API 密钥",
@@ -43,6 +60,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama": "Ollama API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.modelId": "模型 ID",
@@ -50,14 +68,37 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding": "快捷键设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode": "快捷键模式",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "快捷键需要在游戏控制设置中修改。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[0]": "物品翻译的快捷键模式。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[1]": "- 按住翻译: 仅在按住按键时翻译。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[2]": "- 按住查看原文: 始终翻译, 在按住按键时显示原文。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[3]": "- 禁用: 快捷键不影响翻译行为。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding": "快捷键设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode": "快捷键模式",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "快捷键需要在游戏控制设置中修改。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[0]": "计分板翻译的快捷键模式。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[1]": "- 按住翻译: 仅在按住按键时翻译。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[2]": "- 按住查看原文: 始终翻译, 在按住按键时显示原文。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[3]": "- 禁用: 快捷键不影响翻译行为。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled": "启用计分板翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled.@Tooltip": "启用计分板翻译功能",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_prefix_and_suffix_name": "翻译计分板条目前缀和后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_prefix_and_suffix_name.@Tooltip": "启用计分板前缀和后缀名称翻译功能",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_player_name": "翻译计分板条目中的玩家名",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.enabled_translate_player_name.@Tooltip": "启用计分板玩家名称翻译功能",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_concurrent_requests": "最大并发线程数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_concurrent_requests.@Tooltip": "并行翻译线程的数量",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.requests_per_minute": "每分钟最大请求数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.requests_per_minute.@Tooltip": "API每分钟请求数限制（0为禁用）",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_batch_size": "每次最大翻译条数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.max_batch_size.@Tooltip": "单个API请求中翻译的物品lore最大行数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.target_language.@Tooltip": "翻译的目标语言",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi": "OpenAI API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl": "API 地址",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.apiKey": "API 密钥",
@@ -65,6 +106,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama": "Ollama API 设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl": "Ollama URL",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.modelId": "模型 ID",
@@ -72,9 +114,13 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.temperature": "温度系数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry": "自定义参数项",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.key": "参数名",
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "参数值",
+  "key.translate_allinone.item_translate_key": "物品翻译快捷键",
+  "key.translate_allinone.scoreboard_translate_key": "计分板翻译快捷键",
+  "category.translate_allinone.keybindings": "Translate All in One",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
