更新README.md，新增聊天输入翻译功能的说明，并在配置类中重构聊天翻译设置，支持输入和输出翻译的独立配置。同时在代码中实现聊天输入翻译的快捷键注册和处理逻辑。

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -7,42 +7,71 @@
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OPENAI": "OpenAI",
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OLLAMA": "Ollama",
 
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl.@PrefixText": "§eThese settings are only used when 'OpenAI' is selected above.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl.@PrefixText": "§eThese settings are only used when 'Ollama' is selected above.",
 
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "Enable Chat Translation",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled.@Tooltip": "Enable chat translation feature",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "Auto Translate",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate.@Tooltip": "Automatically translate incoming chat messages without clicking the button",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider": "Large Model API Format (Click to Switch)",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language": "Target Language",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language.@Tooltip": "The target language for translation",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response": "Streaming Response",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response.@Tooltip": "Receive the translated response in a streaming fashion",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests": "Max Concurrent Tasks",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[0]": "Maximum number of concurrent translation tasks.",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[1]": "Be careful with high values, as it may trigger API rate limits.",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi": "OpenAI API Settings",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl": "Base URL",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.apiKey": "API Key",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.modelId": "Model ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.temperature": "Temperature",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters": "Custom Parameters",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama": "Ollama API Settings",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl": "Ollama URL",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.modelId": "Model ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.keep_alive_time": "Keep-Alive Time",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.temperature": "Temperature",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters": "Custom Parameters",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output": "Output Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.enabled": "Enable Output Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.enabled.@Tooltip": "Enable chat translation feature for incoming messages",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.auto_translate": "Auto Translate",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.auto_translate.@Tooltip": "Automatically translate incoming chat messages without clicking the button",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.llm_provider": "Large Model API Format (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.target_language": "Target Language",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.target_language.@Tooltip": "The target language for translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.streaming_response": "Streaming Response",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.streaming_response.@Tooltip": "Receive the translated response in a streaming fashion",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests": "Max Concurrent Tasks",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests.@Tooltip[0]": "Maximum number of concurrent translation tasks.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests.@Tooltip[1]": "Be careful with high values, as it may trigger API rate limits.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi": "OpenAI API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.baseUrl": "Base URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.apiKey": "API Key",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama": "Ollama API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.keep_alive_time": "Keep-Alive Time",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
+
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input": "Input Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.enabled": "Enable Input Translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.enabled.@Tooltip": "Enable chat translation feature for outgoing messages",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.streaming_response": "Streaming Response",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.streaming_response.@Tooltip": "Receive the translated response in a streaming fashion",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.llm_provider": "Large Model API Format (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.llm_provider.@Tooltip": "Large Language Model Suppliers (Click to Switch)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.target_language": "Target Language",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.target_language.@Tooltip": "The target language for translation",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi": "OpenAI API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.baseUrl": "Base URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.apiKey": "API Key",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama": "Ollama API Settings",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.modelId": "Model ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.keep_alive_time": "Keep-Alive Time",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.system_prompt_suffix": "System Prompt Suffix",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters": "Custom Parameters",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled": "Enable Item Translation",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled.@Tooltip": "Enable item translation features",
@@ -127,6 +156,7 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "Custom parameter value",
   "key.translate_allinone.item_translate_key": "Item Translation Key",
   "key.translate_allinone.scoreboard_translate_key": "Scoreboard Translation Key",
+  "key.translate_allinone.chat_input_translate_key": "Chat Input Translation Key",
   "category.translate_allinone.keybindings": "Translate All in One",
 
   "text.translate_allinone.translate_button_hover": "Translate this message",
