--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -7,35 +7,62 @@
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OPENAI": "OpenAI",
   "text.autoconfig.translate_allinone/translate_allinone.enum.Provider.OLLAMA": "Ollama",
 
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled": "启用聊天翻译",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.enabled.@Tooltip": "启用聊天翻译功能",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate": "自动翻译",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.auto_translate.@Tooltip": "自动翻译收到的聊天消息，无需点击按钮",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider": "大模型Api格式（点击切换）",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language": "目标语言",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.target_language.@Tooltip": "翻译的目标语言",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response": "流式响应",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.streaming_response.@Tooltip": "以流式方式接收翻译后的响应",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests": "最大并发任务数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[0]": "最大并发翻译任务数。",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.max_concurrent_requests.@Tooltip[1]": "请谨慎设置高数值，可能会触发API速率限制。",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi": "OpenAI API 设置",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl": "API 地址",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.apiKey": "API 密钥",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.modelId": "模型 ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.temperature": "温度系数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters": "自定义参数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama": "Ollama API 设置",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl": "Ollama URL",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.modelId": "模型 ID",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.keep_alive_time": "模型保持加载时间",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.temperature": "温度系数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters": "自定义参数",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output": "输出区翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.enabled": "启用输出区翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.enabled.@Tooltip": "为接收到的消息启用聊天翻译功能",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.auto_translate": "自动翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.auto_translate.@Tooltip": "自动翻译收到的聊天消息，无需点击按钮",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.target_language.@Tooltip": "翻译的目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.streaming_response": "流式响应",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.streaming_response.@Tooltip": "以流式方式接收翻译后的响应",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests": "最大并发任务数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests.@Tooltip[0]": "最大并发翻译任务数。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.max_concurrent_requests.@Tooltip[1]": "请谨慎设置高数值，可能会触发API速率限制。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi": "OpenAI API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.baseUrl": "API 地址",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.apiKey": "API 密钥",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama": "Ollama API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.keep_alive_time": "模型保持加载时间",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
+
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input": "输入区翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.enabled": "启用输入区翻译",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.enabled.@Tooltip": "为发送的消息启用聊天翻译功能",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.streaming_response": "流式响应",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.streaming_response.@Tooltip": "以流式方式接收翻译后的响应",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.llm_provider": "大模型Api格式（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.llm_provider.@Tooltip": "大语言模型提供商（点击切换）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.target_language": "目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.target_language.@Tooltip": "翻译的目标语言",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi": "OpenAI API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.baseUrl": "API 地址",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.apiKey": "API 密钥",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama": "Ollama API 设置",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.ollamaUrl": "Ollama URL",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.modelId": "模型 ID",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.keep_alive_time": "模型保持加载时间",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.system_prompt_suffix": "系统提示词后缀",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters": "自定义参数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
 
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled": "启用物品翻译",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.enabled.@Tooltip": "启用物品翻译功能",
@@ -120,11 +147,12 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.CustomParameterEntry.value": "参数值",
   "key.translate_allinone.item_translate_key": "物品翻译快捷键",
   "key.translate_allinone.scoreboard_translate_key": "计分板翻译快捷键",
+  "key.translate_allinone.chat_input_translate_key": "聊天输入翻译快捷键",
   "category.translate_allinone.keybindings": "Translate All in One",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
-  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
-  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
-  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.baseUrl.@PrefixText": "§e此区域的设置仅在上方选择 'OpenAI' 后生效。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.ollamaUrl.@PrefixText": "§e此区域的设置仅在上方选择 'Ollama' 后生效。",
   "text.translate_allinone.translate_button_hover": "翻译这条消息",
