Update project configuration and improve translation features
- Added AGENTS.md to .gitignore to exclude agent documentation from version control.
- Updated gradle.properties to reflect new Minecraft and Yarn mappings (1.21.10) and updated dependencies for Fabric and ModMenu.
- Revised README.md to indicate support for Minecraft version >=1.21.10.
- Enhanced error handling in ChatHudTranslateCommand for invalid message IDs.
- Refactored MessageUtils to manage tracked messages with a limit, improving memory management.
- Updated various mixins to enhance chat translation functionality and keybinding management.
- Added structured output support in LLM API requests for improved translation results.
- Cleaned up unused ItemStackMixin class and improved cache management in ItemTemplateCache and ScoreboardTextCache.

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -35,6 +35,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.apiKey": "API Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -43,6 +45,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.keep_alive_time": "Keep-Alive Time",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -61,6 +65,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.apiKey": "API Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -69,6 +75,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.keep_alive_time": "Keep-Alive Time",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -94,6 +102,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.apiKey": "API Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -102,6 +112,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.keep_alive_time": "Keep-Alive Time",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -140,6 +152,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.apiKey": "API Key",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
@@ -148,6 +162,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.modelId": "Model ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.keep_alive_time": "Keep-Alive Time",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.temperature": "Temperature",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.enable_structured_output_if_available": "Enable Structured Output (If Available)",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.enable_structured_output_if_available.@Tooltip": "Use JSON structured output when the model supports it; automatically falls back if unsupported",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.system_prompt_suffix": "System Prompt Suffix",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters": "Custom Parameters",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
