--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -26,6 +26,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.apiKey": "API 密钥",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -34,6 +36,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.keep_alive_time": "模型保持加载时间",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.output.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -52,6 +56,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.apiKey": "API 密钥",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -60,6 +66,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.keep_alive_time": "模型保持加载时间",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.chatTranslate.input.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -85,6 +93,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.apiKey": "API 密钥",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -93,6 +103,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.keep_alive_time": "模型保持加载时间",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -131,6 +143,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.apiKey": "API 密钥",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.openapi.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
@@ -139,6 +153,8 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.modelId": "模型 ID",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.keep_alive_time": "模型保持加载时间",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.temperature": "温度系数",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.enable_structured_output_if_available": "启用结构化输出（如果可用）",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.enable_structured_output_if_available.@Tooltip": "若模型支持，则启用 JSON 结构化输出；不支持时自动回退普通模式",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.system_prompt_suffix": "系统提示词后缀",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters": "自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
